use updated field alias for name display

--- a/app/src/main/res/layout/fragment_field_detail.xml
+++ b/app/src/main/res/layout/fragment_field_detail.xml
@@ -60,7 +60,7 @@
 
                         <TextView
                             style="@style/TextViewStyle.Bold.Title"
-                            android:id="@+id/fieldName"
+                            android:id="@+id/fieldDisplayName"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:ellipsize="end"/>
