--- a/app/src/main/res/layout/list_item_field_recycler.xml
+++ b/app/src/main/res/layout/list_item_field_recycler.xml
@@ -6,14 +6,14 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:paddingTop="12dp"
-    android:paddingBottom="12dp">
+    android:padding="8dp">
 
     <ImageView
         android:id="@+id/fieldSourceIcon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_margin="8dp"/>
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:gravity="center"
+        android:padding="8dp"/>
 
     <LinearLayout xmlns:tools="http://schemas.android.com/tools"
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -21,7 +21,8 @@
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_centerVertical="true">
+        android:layout_centerVertical="true"
+        android:layout_marginStart="16dp">
 
         <TextView
             style="@style/TextViewStyle.Bold.Title"
