--- a/app/src/main/res/layout/list_item_search.xml
+++ b/app/src/main/res/layout/list_item_search.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:inputType="text"
         android:singleLine="true"
-        android:textSize="@dimen/text_size_medium"
+        android:textSize="?attr/fb_body_text_size"
         android:gravity="end"
         app:layout_constraintBottom_toBottomOf="@id/list_item_search_like"
         app:layout_constraintEnd_toStartOf="@id/list_item_search_delete_btn"
@@ -39,7 +39,7 @@
         android:layout_margin="4dp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:textSize="@dimen/text_size_medium"
+        android:textSize="?attr/fb_body_text_size"
         app:layout_constraintBottom_toBottomOf="@id/list_item_search_like"
         app:layout_constraintEnd_toStartOf="@id/list_item_search_like"
         app:layout_constraintStart_toStartOf="parent"
