--- a/app/src/main/res/layout/dialog_search_results_trait_headers.xml
+++ b/app/src/main/res/layout/dialog_search_results_trait_headers.xml
@@ -6,4 +6,5 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_weight="1"
-    android:gravity="center" />
+    android:gravity="center"
+    android:textSize="?attr/fb_body_text_size"/>
