--- a/app/src/main/res/layout/listitem_search_results_traits.xml
+++ b/app/src/main/res/layout/listitem_search_results_traits.xml
@@ -4,4 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_weight="1"
-    android:gravity="center"/>
+    android:gravity="center"
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp"
+    android:textSize="?attr/fb_body_text_size"/>
