--- a/app/src/main/res/drawable/round_outline_button.xml
+++ b/app/src/main/res/drawable/round_outline_button.xml
@@ -1,31 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- State: Not Pressed -->
     <item android:state_pressed="false">
         <shape android:shape="oval">
-            <solid android:color="?attr/fb_button_color_normal" /> <!-- Transparent background for the normal state -->
+            <solid android:color="?attr/fb_button_color_normal" />
             <stroke
                 android:width="2dp"
-                android:color="?fb_border_color" /> <!-- Use the outline color defined in your theme -->
-<!--            <padding-->
-<!--                android:bottom="5dp"-->
-<!--                android:left="5dp"-->
-<!--                android:right="5dp"-->
-<!--                android:top="5dp" />-->
+                android:color="?fb_border_color" />
         </shape>
     </item>
-    <!-- State: Pressed -->
     <item android:state_pressed="true">
         <shape android:shape="oval">
-            <solid android:color="?attr/fb_button_color_pressed" /> <!-- Color for the pressed state -->
+            <solid android:color="?attr/fb_button_color_pressed" />
             <stroke
                 android:width="2dp"
-                android:color="?fb_border_color" /> <!-- Maintain the outline color even in pressed state -->
-<!--            <padding-->
-<!--                android:bottom="5dp"-->
-<!--                android:left="5dp"-->
-<!--                android:right="5dp"-->
-<!--                android:top="5dp" />-->
+                android:color="?fb_border_color" />
         </shape>
     </item>
 </selector>
