--- a/app/src/main/res/layout/dialog_collect_att_chooser.xml
+++ b/app/src/main/res/layout/dialog_collect_att_chooser.xml
@@ -34,14 +34,25 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/list_item_infobar" />
 
-    <Button style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_margin="8dp"
-        android:id="@+id/dialog_collect_att_chooser_cancel_btn"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="48dp"
-        android:maxHeight="48dp"
-        android:text="@android:string/cancel" />
+        android:orientation="horizontal">
+
+        <Button style="@style/Widget.AppCompat.Button.Borderless"
+            android:id="@+id/dialog_collect_att_chooser_customize_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/dialog_att_chooser_customize" />
+
+        <Button style="@style/Widget.AppCompat.Button.Borderless"
+            android:id="@+id/dialog_collect_att_chooser_cancel_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@android:string/cancel" />
+    </LinearLayout>
 
 </LinearLayout>
 
