--- a/app/src/main/res/layout/trait_camera.xml
+++ b/app/src/main/res/layout/trait_camera.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.fieldbook.tracker.traits.CanonTrait xmlns:app="http://schemas.android.com/apk/res-auto"
+<com.fieldbook.tracker.traits.CameraTrait xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/canon_layout"
+    android:id="@+id/camera_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/canon_fragment_cv">
+        android:id="@+id/camera_fragment_cv">
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="0dp"
@@ -24,28 +24,29 @@
             android:orientation="horizontal"
             android:minWidth="128dp"
             android:minHeight="128dp"
-            android:visibility="visible"
             tools:listitem="@layout/list_item_image"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            android:id="@+id/canon_fragment_rv"
+            android:id="@+id/camera_fragment_rv"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             style="@style/FloatingActionButtonStyle.TraitButtons"
-            android:contentDescription="TODO"
+            android:contentDescription="@string/trait_camera_connect_content_description"
             android:src="@drawable/ic_connection"
-            android:id="@+id/canon_fragment_connect_btn"
+            android:id="@+id/camera_fragment_connect_btn"
             android:layout_width="@dimen/fb_trait_fab_size"
             android:layout_height="@dimen/fb_trait_fab_size"
             android:layout_margin="8dp"
-            app:layout_constraintTop_toBottomOf="@id/canon_fragment_rv"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@id/camera_fragment_rv"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
-            android:id="@+id/trait_canon_iv"
+            android:visibility="visible"
+            android:id="@+id/trait_camera_iv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:scaleType="fitCenter"
@@ -54,20 +55,21 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/canon_fragment_rv"
-            android:contentDescription="TODO" />
+            app:layout_constraintTop_toBottomOf="@id/camera_fragment_rv"
+            android:contentDescription="@string/trait_camera_preview_content_description" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             style="@style/FloatingActionButtonStyle.TraitButtons"
-            android:id="@+id/canon_fragment_capture_btn"
+            android:id="@+id/camera_fragment_capture_btn"
             android:layout_width="@dimen/fb_trait_fab_size"
             android:layout_height="@dimen/fb_trait_fab_size"
             android:layout_margin="8dp"
-            app:layout_constraintBottom_toBottomOf="@id/trait_canon_iv"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/trait_camera_iv"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:contentDescription="TODO" />
+            android:contentDescription="@string/trait_camera_capture_content_description" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</com.fieldbook.tracker.traits.CanonTrait>
+</com.fieldbook.tracker.traits.CameraTrait>
