Handle error codes

--- a/app/src/main/res/layout/dialog_upload_files.xml
+++ b/app/src/main/res/layout/dialog_upload_files.xml
@@ -29,7 +29,7 @@
             android:id="@+id/pickAudioButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Select Audio File" />
+            android:text="Select File" />
 
         <TextView
             android:id="@+id/uploadStatusMessage"
