--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -108,6 +108,8 @@
 
         <item name="iconTint">?attr/fb_icon_tint</item>
 
+        <item name="fb_error_message_color">@color/RED</item>
+
     </style>
 
     <!-- Blue Theme -->
@@ -252,6 +254,8 @@
         <item name="android:animation">@null</item>
         <item name="hintAnimationEnabled">false</item>
         <item name="android:stateListAnimator">@null</item>
+
+        <item name="fb_error_message_color">@color/GRAY</item>
 
     </style>
 
