--- a/app/src/main/res/layout/statistics_card.xml
+++ b/app/src/main/res/layout/statistics_card.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
     android:layout_marginBottom="8dp"
+    android:id="@+id/statistics_card"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
