--- a/app/src/main/res/layout/dialog_individual_statistics.xml
+++ b/app/src/main/res/layout/dialog_individual_statistics.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingStart="25dp"
+        android:paddingEnd="25dp"
         android:fastScrollEnabled="true" />
 
 </LinearLayout>
