--- a/app/src/main/res/layout/list_item_individual_statistics.xml
+++ b/app/src/main/res/layout/list_item_individual_statistics.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
         tools:text="1"/>
 
 </LinearLayout>   
