--- a/app/src/main/res/layout/trait_camera.xml
+++ b/app/src/main/res/layout/trait_camera.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/camera_layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:visibility="gone"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,25 +11,21 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/camera_fragment_cv">
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="0dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             android:orientation="horizontal"
-            android:minWidth="128dp"
-            android:minHeight="128dp"
             tools:listitem="@layout/list_item_image"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:id="@+id/camera_fragment_rv"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/trait_camera_pv"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             style="@style/FloatingActionButtonStyle.TraitButtons"
@@ -44,19 +40,45 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <androidx.camera.view.PreviewView
+            tools:visibility="visible"
+            android:visibility="gone"
+            android:id="@+id/trait_camera_pv"
+            android:layout_width="0dp"
+            android:layout_height="640px"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/camera_fragment_rv"/>
+
         <ImageView
-            android:visibility="visible"
+            android:visibility="gone"
             android:id="@+id/trait_camera_iv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:scaleType="fitCenter"
             android:adjustViewBounds="true"
+            tools:src="@raw/chip"
             app:layout_constraintVertical_bias="0"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/camera_fragment_capture_btn"
             app:layout_constraintTop_toBottomOf="@id/camera_fragment_rv"
             android:contentDescription="@string/trait_camera_preview_content_description" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            style="@style/FloatingActionButtonStyle.SmallTraitButtons"
+            android:id="@+id/camera_fragment_settings_btn"
+            android:layout_width="@dimen/fb_trait_fab_size_small"
+            android:layout_height="@dimen/fb_trait_fab_size_small"
+            android:layout_margin="8dp"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:src="@drawable/ic_nav_drawer_settings"
+            app:layout_constraintTop_toTopOf="@id/camera_fragment_capture_btn"
+            app:layout_constraintEnd_toStartOf="@id/camera_fragment_capture_btn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/camera_fragment_capture_btn"
+            android:contentDescription="@string/trait_camera_capture_content_description" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             style="@style/FloatingActionButtonStyle.TraitButtons"
@@ -65,7 +87,9 @@
             android:layout_height="@dimen/fb_trait_fab_size"
             android:layout_margin="8dp"
             android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@id/trait_camera_iv"
+            tools:visibility="visible"
+            android:src="@drawable/camera_24px"
+            app:layout_constraintTop_toBottomOf="@id/trait_camera_pv"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:contentDescription="@string/trait_camera_capture_content_description" />
