--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,6 +27,9 @@
     <dimen name="default_row_header_width">55dp</dimen>
     <dimen name="default_column_header_height">40dp</dimen>
 
+    <dimen name="fb_trait_fab_size_small">48dp</dimen>
+    <dimen name="fb_trait_fab_image_size_small">24dp</dimen>
+
     <dimen name="fb_trait_fab_size">76dp</dimen>
     <dimen name="fb_trait_big_fab_size">176dp</dimen>
     <dimen name="fb_trait_fab_image_size">38dp</dimen>
