Dialog on long click instead of FAB
* Removed FAB
* Added long press listeners
* Adjusted padding

--- a/app/src/main/res/layout/view_collect_input.xml
+++ b/app/src/main/res/layout/view_collect_input.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:enabled="false"
+        android:focusable="false"
         android:gravity="center"
         android:inputType="textNoSuggestions"
         android:maxLines="1"
