--- a/app/src/main/res/layout/dialog_observation_metadata.xml
+++ b/app/src/main/res/layout/dialog_observation_metadata.xml
@@ -11,6 +11,7 @@
         android:id="@+id/dialog_observation_metadata_rv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingHorizontal="18dp"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
